objects/UserBitz__c.object
<CustomObject>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoLevelValue__c</fullName>
        <formula>text( Parameter__c ) + &apos;;&apos; + Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NoLevelValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParamValue__c</fullName>
        <formula>text( Parameter__c ) + &apos;;&apos; +  Value__c + if( ISBLANK(Level__c ) ,&apos;&apos;,&apos;;&apos;+ Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParamValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter__c</fullName>
        <label>Parameter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UBArray100__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UBArray100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UBArray101__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UBArray101</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UBArray102__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UBArray102</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objParamValue__c</fullName>
        <formula>objectType__c  + &apos;;&apos; + Text( Parameter__c ) + &apos;;&apos; + Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>objParamValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objectType__c</fullName>
        <label>objectType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>UserBitz</label>
    <listViews>
        <fullName>All</fullName>
        <columns>objectType__c</columns>
        <columns>ParamValue__c</columns>
        <columns>UBArray1__c</columns>
        <columns>UBArray2__c</columns>
        <columns>UBArray3__c</columns>
        <columns>UBArray4__c</columns>
        <columns>UBArray5__c</columns>
        <columns>UBArray6__c</columns>
        <columns>UBArray7__c</columns>
        <columns>UBArray8__c</columns>
        <columns>Parameter__c</columns>
        <columns>Value__c</columns>
        <columns>NAME</columns>
        <columns>objParamValue__c</columns>
        <columns>UBArray18__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_UserBitz</fullName>
        <columns>NAME</columns>
        <columns>objectType__c</columns>
        <columns>Level__c</columns>
        <columns>Parameter__c</columns>
        <columns>Value__c</columns>
        <columns>UBArray1__c</columns>
        <columns>UBArray2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All UserBitz</label>
    </listViews>
    <nameField>
        <label>UserBitz Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserBitz</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>